# gtool

./: .gitignore  COPYRIGHT  CREDITS.rd  ChangeLog.old  Config.mk.Win  Config.mk.in  HISTORY  INSTALL  INSTALL_netcdf.rd  Makefile  README.md  TODO  configure  configure.in  genMakefile-win.rb  rules.make
doc/: Makefile  Makefile.rd2html  Makefile.rdoc  Makefile.rdoc-dev  index.rd  intro-gtool5.rd  lib-configure.rd  lib-datatypes.rd  lib-derivedtype.rd  lib-error.rd  lib-gtoolvar1.rd  lib-gtoolvar2.rd  lib-naming.rd  lib-oop.rd  lib-overview-doc.Makefile  lib-overview-doc.rd  lib-overview.rd  lib-rb2f90.rd  polymorphism-main.f90  polymorphism.f90  polymorphism.rb2f90  rdoc-style-gtool5.css  transition-gt4f90io.rd  xref.rd
doc/images/: Makefile  gtool5_overview.odg
doc/tutorial/: Makefile  Makefile.rd2html  dc_args.rd  dc_calendar1.rd  dc_calendar2.rd  dc_clock.rd  dc_date.rd  dc_message.rd  dc_trace.rd  dc_types.rd  examples.rd  gtauto_desc.rd  gtauto_desc2.rd  gtauto_first.rd  gtauto_first2.rd  gthist_attr.rd  gthist_desc.rd  gthist_f77.rd  gthist_first.rd  gthist_gave.rd  gthist_multi.rd  gthist_restart.rd  index.rd
gt5frt/: Makefile  gt5configgen.sh  gt5frtgen.sh
htmltools/: Makefile.rd2html  gtool5.css
script/configure/: aclocal.m4  chkfort.sh  chkgmake.sh  chkrps.sh  chkrubyver.rb
script/f90/: DBL.pl  f90depend.pl  f90depend.rb  f90depend.sh
script/rb2f90/: lib-rb2f90-macro-intrinsic_types.rb  lib-rb2f90-macro.rb  ruby_version_check.rb
script/windows/: gen-Makefile.win.rb  gnumakefileparser-test.rb  gnumakefileparser.rb
src/: Makefile  SRC_LIST  generic_names.rdoc  hspack.rdoc
src/dc_utils/: Makefile  dc_args.f90  dc_calendar.f90  dc_calendar_generic.f90  dc_calendar_internal.f90  dc_calendar_types.f90  dc_clock.F90  dc_date.f90  dc_date_generic.f90  dc_date_internal.f90  dc_date_types.f90  dc_error.f90  dc_hash.f90  dc_iounit.f90  dc_message.F90  dc_present.f90  dc_present.rb2f90  dc_regex.f90  dc_scaledsec.f90  dc_string.f90  dc_string.rb2f90  dc_test.f90  dc_test.rb2f90  dc_trace.F90  dc_types.f90  dc_units.f90  dc_url.f90  dc_utils.f90  dccalconvertbyunit.f90  dccalconverttoday.f90  dccalconverttohour.f90  dccalconverttomin.f90  dccalconverttosec.f90  dccalcreate.f90  dccaldatechkleapyear.f90  dccaldatecreate.f90  dccaldatecurrent.f90  dccaldatedifference.f90  dccaldateeval.f90  dccaldateinquire.f90  (+33 more)
src/gtdata/: Makefile  gtdata_generic.erb  gtdata_generic.f90  gtdata_internal_map.f90  gtdata_internal_vartable.f90  gtdata_types.f90  gtvaradddim.f90  gtvaraddmember.f90  gtvarattrsearch.f90  gtvarattrtrue.f90  gtvarclose.f90  gtvarcopyattr.f90  gtvarcopyattrall.f90  gtvarcreate.f90  gtvarcreatecopy.f90  gtvarcreated.f90  gtvardelattr.f90  gtvardeldim.f90  gtvardimname2ord.f90  gtvarequivalent.f90  gtvarexchdim.f90  gtvargetattr.f90  gtvargetattrsc.f90  gtvargetnum.erb  gtvargetnum.f90  gtvargetpointernum.erb  gtvargetpointernum.f90  gtvargetslice.f90  gtvargetsliceall.f90  gtvargetxtype.f90  gtvarinquire.f90  gtvarlimit.f90  gtvarlimitbinary.f90  gtvaropen.f90  gtvaropenbydimord.f90  gtvarputattrchar.f90  gtvarputline.f90  gtvarputnum.erb  gtvarputnum.f90  gtvarsearch.f90  (+6 more)
src/gtool/: Makefile  gt4f90io.f90  gtool5.f90
src/sysdep/: Makefile  sysdep.f90  sysdepabort-abort.f90  sysdepabort-errtra-setrcd.f90  sysdepabort-exit.f90  sysdepabort-setrcd.f90  sysdepabort-stop.f90  sysdepabort.rb2f90  sysdeparg-f2003std.f90  sysdeparg-hitachi.f90  sysdeparg-nostd.f90  sysdeparg.rb2f90  sysdepenv-f2003std.f90  sysdepenv-nogetenv.f90  sysdepenv-nostd.f90  sysdepenv.rb2f90
test/: Makefile  dc_args_test.f90  dc_args_test.sh  dc_calendar_test.f90  dc_calendar_test.sh  dc_clock_test.f90  dc_clock_test.sh  dc_date_test.f90  dc_date_test.sh  dc_hash_test.f90  dc_hash_test.sh  dc_iounit_test.f90  dc_iounit_test.sh  dc_scaledsec_test.f90  dc_scaledsec_test.sh  dc_string_test.f90  dc_string_test.sh  dc_test_test.f90  dc_test_test.sh  dc_url_test.f90  dc_url_test.sh  histauto.f90  histauto.sh  histauto2.f90  histauto2.sh  histauto2_mpi.f90  histauto2_mpi.sh  histauto2_nml04.nml  histauto2_nml06.nml  histauto2_nml08.nml  histauto2_nml10.nml  histauto2_nml12.nml  histauto2_nml15-01.nml  histauto2_nml15-02.nml  histauto2_nml22.nml  histauto2_nml23.nml  histauto_mpi.f90  histauto_mpi.sh  histauto_nml04.nml  histauto_nml06.nml  (+29 more)
test/xhistauto/: test01-v.orig.nc  test01-w.orig.nc  test02-v.orig.nc  test04-u.orig.nc  test04-v.orig.nc  test04-ww.orig.nc  test05-ns.orig.nc  test05-w.orig.nc  test06-v.orig.nc  test06-w.orig.nc  test07-v.orig.nc  test07-w.orig.nc  test08-u.orig.nc  test08-v.orig.nc  test08-w.orig.nc  test09-u.orig.nc  test09-v.orig.nc  test09-w.orig.nc  test11-u_time00000000.orig.nc  test11-u_time00000001.orig.nc  test11-u_time00000002.orig.nc  test11-v_time00000001.orig.nc  test11-v_time00000002.orig.nc  test12-u_time00000060.orig.nc  test12-u_time00000090.orig.nc  test12-v_time00000024.orig.nc  test12-v_time00000030.orig.nc  test12-w_time00000025.orig.nc  test13-u_rank01.orig.nc  test13-w_rank01_time00000000.orig.nc  test13-w_rank01_time00000100.orig.nc  test13-w_rank01_time00000200.orig.nc  test14-u.orig.nc  test14-w.orig.nc  test15-01-u.orig.nc  test16-u.orig.nc  test16-v.orig.nc  test16-w.orig.nc  test17-u.orig.nc  test18-u.orig.nc  (+12 more)
test/xhistauto2/: test01-u.orig.nc  test02-u.orig.nc  test03-u.orig.nc  test05-v.orig.nc  test06-ns.orig.nc  test07-u.orig.nc  test10-u.orig.nc  test10-v.orig.nc  test10-w.orig.nc  test11-u_time00000003.orig.nc  test11-u_time00000004.orig.nc  test11-v_time00000003.orig.nc  test11-w_time00000001.orig.nc  test11-w_time00000002.orig.nc  test11-w_time00000003.orig.nc  test12-u_time00000000.orig.nc  test12-u_time00000030.orig.nc  test12-v_time00000036.orig.nc  test12-w_time00000030.orig.nc  test12-w_time00000035.orig.nc  test13-v_rank01.orig.nc  test13-w_rank01_time00000300.orig.nc  test15-01-v.orig.nc  test15-02-u.orig.nc  test15-02-v.orig.nc  test18-v.orig.nc  test18-w.orig.nc  test19-gregorian-u.orig.nc  test19-noleap-u.orig.nc  test19-none-u.orig.nc  test20-u.orig.nc  test21-u.orig.nc  test21-v.orig.nc  test21-w.orig.nc  (+9 more)
(+242 files in other folders)
